--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,24 @@ services:
     networks:
       - tinisoft-network
 
+  api-db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: tinisoft
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "6009:5432"
+    volumes:
+      - api_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - tinisoft-network
+
   # Redis
   redis:
     image: redis:7-alpine
@@ -461,6 +479,39 @@ services:
     networks:
       - tinisoft-network
 
+  api:
+    build:
+      context: .
+      dockerfile: src/Tinisoft.API/Dockerfile
+    ports:
+      - "5010:5010"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ConnectionStrings__DefaultConnection: "Host=api-db;Port=5432;Database=tinisoft;Username=postgres;Password=postgres;Maximum Pool Size=100;Command Timeout=30;Timeout=30;Connection Lifetime=0;Pooling=true;"
+      Redis__ConnectionString: "redis:6379"
+      RabbitMQ__HostName: "rabbitmq"
+      RabbitMQ__Port: "5672"
+      RabbitMQ__UserName: guest
+      RabbitMQ__Password: guest
+      Kafka__BootstrapServers: "kafka:9093"
+      Kafka__TopicPrefix: "tinisoft"
+      Kafka__ConsumerGroup: "tinisoft-consumers"
+      Jwt__SecretKey: TinisoftSuperSecretJWTKey2024Minimum32CharactersLongForSecurity!
+      Jwt__Issuer: tinisoft
+      Jwt__Audience: tinisoft
+      Jwt__ExpirationMinutes: 1440
+    depends_on:
+      api-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    networks:
+      - tinisoft-network
+
   # API Gateway
   gateway:
     build:
@@ -469,6 +520,7 @@ services:
     ports:
       - "5000:5000"
     depends_on:
+      - api
       - products-api
       - inventory-api
       - payments-api
@@ -491,6 +543,7 @@ volumes:
   shipping_db_data:
   notifications_db_data:
   invoices_db_data:
+  api_db_data:
   redis_data:
   rabbitmq_data:
   zookeeper_data:
