--- a/src/Tinisoft.Application/Tinisoft.Application.csproj
+++ b/src/Tinisoft.Application/Tinisoft.Application.csproj
@@ -12,11 +12,17 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Finbuckle.MultiTenant" Version="6.12.0" />
+    <PackageReference Include="Meilisearch" Version="0.17.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Tinisoft.Domain\Tinisoft.Domain.csproj" />
     <ProjectReference Include="..\Tinisoft.Shared\Tinisoft.Shared.csproj" />
+    <ProjectReference Include="..\Tinisoft.Infrastructure\Tinisoft.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
