--- a/src/Tinisoft.Inventory.API/Dockerfile
+++ b/src/Tinisoft.Inventory.API/Dockerfile
@@ -19,8 +19,20 @@ RUN dotnet build "Tinisoft.Inventory.API.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Tinisoft.Inventory.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-FROM base AS final
+# Use SDK image for final stage to have dotnet ef tool available
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS final
 WORKDIR /app
+
+# Install dotnet ef tool
+RUN dotnet tool install --global dotnet-ef --version 8.0.4
+ENV PATH="${PATH}:/root/.dotnet/tools"
+
+# Copy published app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Tinisoft.Inventory.API.dll"]
+
+# Copy source code for migrations (needed for dotnet ef)
+COPY --from=build /src/src /src/src
+
+WORKDIR /src/src/Tinisoft.Inventory.API
+ENTRYPOINT ["dotnet", "/app/Tinisoft.Inventory.API.dll"]
 
