--- a/src/Tinisoft.API/Dockerfile
+++ b/src/Tinisoft.API/Dockerfile
@@ -5,6 +5,9 @@ EXPOSE 5010
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
+# Install dotnet ef tool globally
+RUN dotnet tool install --global dotnet-ef --version 8.0.4
+
 COPY ["src/Tinisoft.API/Tinisoft.API.csproj", "src/Tinisoft.API/"]
 COPY ["src/Tinisoft.Application/Tinisoft.Application.csproj", "src/Tinisoft.Application/"]
 COPY ["src/Tinisoft.Domain/Tinisoft.Domain.csproj", "src/Tinisoft.Domain/"]
@@ -19,8 +22,20 @@ RUN dotnet build "Tinisoft.API.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Tinisoft.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-FROM base AS final
+# Use SDK image for final stage to have dotnet ef tool available
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS final
 WORKDIR /app
+
+# Install dotnet ef tool
+RUN dotnet tool install --global dotnet-ef --version 8.0.4
+ENV PATH="${PATH}:/root/.dotnet/tools"
+
+# Copy published app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Tinisoft.API.dll"]
+
+# Copy source code for migrations (needed for dotnet ef)
+COPY --from=build /src/src /src/src
+
+WORKDIR /src/src/Tinisoft.API
+ENTRYPOINT ["dotnet", "/app/Tinisoft.API.dll"]
 
