--- a/.env
+++ b/.env
@@ -85,7 +85,7 @@ PAYTR_MERCHANT_SALT=your-merchant-salt
 PAYTR_TEST_MODE=True
 
 # Cargo Integration - Aras Kargo
-ARAS_API_KEY=
+ARAS_API_KEY=4
 ARAS_API_SECRET=
 ARAS_TEST_MODE=True
 
