--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ venv.bak/
 .DS_Store
 Thumbs.db
 
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # Docker
 docker-compose.override.yml
