--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -1,9 +1,8 @@
 # Django Settings
 SECRET_KEY=your-secret-key-here-change-in-production
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://tinisoft.com.tr,https://www.tinisoft.com.tr
-
+ALLOWED_HOSTS=api.tinisoft.com.tr,localhost,127.0.0.1
+CORS_ALLOWED_ORIGINS=https://tinisoft.com.tr,https://www.tinisoft.com.tr,http://localhost:3000,http://localhost:3001,http://localhost:3456
 # Database - PostgreSQL (Main)
 DB_HOST=postgres
 DB_PORT=5432
