--- a/tinisoft/nginx-api.conf
+++ b/tinisoft/nginx-api.conf
@@ -1,5 +1,8 @@
 server {
     server_name api.tinisoft.com.tr;
+    
+    # Upload size limit (413 hatası için)
+    client_max_body_size 10M;
 
     location / {
         proxy_pass http://127.0.0.1:5000;  # Docker port mapping: 5000->8000
@@ -8,6 +11,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS headers (Nginx seviyesinde de ekle)
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        
+        # OPTIONS request için
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
         
         # WebSocket support (gerekirse)
         proxy_set_header Upgrade $http_upgrade;
