--- a/tinisoft/docker-compose.yml
+++ b/tinisoft/docker-compose.yml
@@ -50,6 +50,15 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - ALLOWED_HOSTS=${ALLOWED_HOSTS:-api.tinisoft.com.tr}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-https://tinisoft.com.tr,https://www.tinisoft.com.tr}
+      # Cloudflare R2 Settings
+      - USE_R2=${USE_R2:-False}
+      - R2_ACCESS_KEY_ID=${R2_ACCESS_KEY_ID:-}
+      - R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY:-}
+      - R2_BUCKET_NAME=${R2_BUCKET_NAME:-}
+      - R2_ENDPOINT_URL=${R2_ENDPOINT_URL:-}
+      - R2_REGION=${R2_REGION:-auto}
+      - R2_CUSTOM_DOMAIN=${R2_CUSTOM_DOMAIN:-}
+      - R2_ACCOUNT_ID=${R2_ACCOUNT_ID:-}
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
