--- a/tinisoft/nginx-api.conf
+++ b/tinisoft/nginx-api.conf
@@ -12,17 +12,27 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers (Nginx seviyesinde de ekle)
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        # CORS headers - Origin dinamik olarak set edilmeli (credentials için)
+        # İzin verilen origin'ler
+        set $cors_origin "";
+        if ($http_origin ~* "^https?://(localhost|127\.0\.0\.1|tinisoft\.com\.tr|www\.tinisoft\.com\.tr|.*\.tinisoft\.com\.tr)(:[0-9]+)?$") {
+            set $cors_origin $http_origin;
+        }
+        # Eğer origin yoksa veya izin verilen listede değilse, boş bırak (Django CORS middleware halledecek)
         
-        # OPTIONS request için
+        # CORS headers (sadece izin verilen origin'ler için)
+        add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Expose-Headers' 'Set-Cookie' always;
+        
+        # OPTIONS request için (preflight)
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
