--- a/tinisoft/nginx-api.conf
+++ b/tinisoft/nginx-api.conf
@@ -23,7 +23,7 @@ server {
         # CORS headers (sadece izin verilen origin'ler için)
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID, X-Currency-Code' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Expose-Headers' 'Set-Cookie' always;
         
@@ -31,7 +31,7 @@ server {
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Tenant-ID, X-Tenant-Slug, X-CSRFToken, X-Session-ID, X-Currency-Code' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
