--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -174,3 +174,4 @@ R2_SECRET_ACCESS_KEY=9f8df24767e332e29f88052384fd306866b63cdad69d0bc650b9319e5dd
 R2_BUCKET_NAME=tinisoft
 R2_ENDPOINT_URL=https://55fe8f65f23c207cad99a4794c11d0c2.r2.cloudflarestorage.com
 R2_REGION=auto
+R2_CUSTOM_DOMAIN=cdn.tinisoft.com.tr  # ⭐ BURASI ÖNEMLİ
