--- a/tinisoft/requirements.txt
+++ b/tinisoft/requirements.txt
@@ -11,7 +11,7 @@ requests==2.31.0
 dnspython==2.4.2
 docker==7.0.0
 PyJWT==2.8.0
-cryptography==42.0.2
+cryptography>=42.0.2
 gunicorn==21.2.0
 whitenoise==6.6.0
 django-environ==0.11.2
