--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -77,11 +77,7 @@ SMS_API_KEY=
 SMS_API_SECRET=
 SMS_FROM_NUMBER=
 
-# PayTR Payment Integration
-PAYTR_MERCHANT_ID=your-merchant-id
-PAYTR_MERCHANT_KEY=your-merchant-key
-PAYTR_MERCHANT_SALT=your-merchant-salt
-PAYTR_TEST_MODE=True
+
 
 # Cargo Integration - Aras Kargo
 ARAS_API_KEY=
@@ -175,3 +171,8 @@ R2_BUCKET_NAME=tinisoft
 R2_ENDPOINT_URL=https://55fe8f65f23c207cad99a4794c11d0c2.r2.cloudflarestorage.com
 R2_REGION=auto
 R2_CUSTOM_DOMAIN=cdn.tinisoft.com.tr  # ⭐ BURASI ÖNEMLİ
+
+
+KUVEYT_API_URL=https://api.kuveyt.com/payment
+KUVEYT_API_TEST_URL=https://test-api.kuveyt.com/payment
+API_BASE_URL=https://api.tinisoft.com.tr
