--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -173,6 +173,6 @@ R2_REGION=auto
 R2_CUSTOM_DOMAIN=cdn.tinisoft.com.tr  # ⭐ BURASI ÖNEMLİ
 
 
-KUVEYT_API_URL=https://api.kuveyt.com/payment
-KUVEYT_API_TEST_URL=https://test-api.kuveyt.com/payment
+KUVEYT_API_URL=https://boa.kuveytturk.com.tr/sanalposservice/Home/ThreeDModelPayGate
+KUVEYT_API_TEST_URL=https://boatest.kuveytturk.com.tr/boa.virtualpos.services/Home/ThreeDModelPayGate
 API_BASE_URL=https://api.tinisoft.com.tr
