--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -13,7 +13,7 @@ DB_SCHEMA=public
 
 # Database - Products Service
 DB_PRODUCTS_SCHEMA=products
-
+DEBUG=False
 # Database - Inventory Service
 DB_INVENTORY_SCHEMA=inventory
 
@@ -129,7 +129,7 @@ NOTIFICATIONS_API_PORT=5008
 INVOICES_API_PORT=5009
 
 # Logging
-LOG_LEVEL=INFO
+LOG_LEVEL=WARNING
 LOG_FILE=/app/logs/tinisoft.log
 
 # Celery (Background Tasks)
