--- a/tinisoft/.env
+++ b/tinisoft/.env
@@ -13,7 +13,7 @@ DB_SCHEMA=public
 
 # Database - Products Service
 DB_PRODUCTS_SCHEMA=products
-DEBUG=False
+DEBUG=True
 # Database - Inventory Service
 DB_INVENTORY_SCHEMA=inventory
 
