--- a/tinisoft/docker-compose.yml
+++ b/tinisoft/docker-compose.yml
@@ -101,6 +101,15 @@ services:
       - REDIS_PORT=6379
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      # Cloudflare R2 Settings
+      - USE_R2=${USE_R2:-False}
+      - R2_ACCESS_KEY_ID=${R2_ACCESS_KEY_ID:-}
+      - R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY:-}
+      - R2_BUCKET_NAME=${R2_BUCKET_NAME:-}
+      - R2_ENDPOINT_URL=${R2_ENDPOINT_URL:-}
+      - R2_REGION=${R2_REGION:-auto}
+      - R2_CUSTOM_DOMAIN=${R2_CUSTOM_DOMAIN:-}
+      - R2_ACCOUNT_ID=${R2_ACCOUNT_ID:-}
     volumes:
       - .:/app
     depends_on:
@@ -127,6 +136,15 @@ services:
       - REDIS_PORT=6379
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      # Cloudflare R2 Settings
+      - USE_R2=${USE_R2:-False}
+      - R2_ACCESS_KEY_ID=${R2_ACCESS_KEY_ID:-}
+      - R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY:-}
+      - R2_BUCKET_NAME=${R2_BUCKET_NAME:-}
+      - R2_ENDPOINT_URL=${R2_ENDPOINT_URL:-}
+      - R2_REGION=${R2_REGION:-auto}
+      - R2_CUSTOM_DOMAIN=${R2_CUSTOM_DOMAIN:-}
+      - R2_ACCOUNT_ID=${R2_ACCOUNT_ID:-}
     volumes:
       - .:/app
     depends_on:
